Bug 125374 - fix word-break; fix js for collapse/expand all comments
git-svn-id: svn://svn.office.custis.ru/3rdparty/bugzilla.org/trunk@1789 6955db30-a419-402b-8a0d-67ecbb4d7f56

--- a/skins/standard/comments.css
+++ b/skins/standard/comments.css
@@ -21,4 +21,6 @@
 
 .bz_comment .attachment_image { max-width: 50em; margin: 10px 0px 0px 0px; }
 
-.bz_comment_text.bz_fullscreen_comment { min-width: 50em; width: 100%; word-break: break-all; }
+.bz_comment_text.bz_fullscreen_comment { min-width: 50em; width: 100%; word-wrap: break-word; }
+
+#comments > table, .bz_section_additional_comments > table { table-layout: fixed; }
